--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: ^4.6.6
 
+  get: ^4.6.6
+  google_fonts: ^6.2.1
+  intl: any
+  flutter_localizations:
+    sdk: flutter
+  flutter_gen: ^5.8.0
+  shared_preferences: ^2.3.2
+  get_storage: ^2.1.1
+  build_runner: ^2.4.11
+get:
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+get_cli: ^1.8.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -47,7 +60,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-
+  flutter_gen_runner:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -58,11 +71,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true # Add this line
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
